--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,11 @@
       <header class="main-header">
 
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="http://www.statthis.com/" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>A</b>LT</span>
+          <span class="logo-mini"><b>S</b>T!</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Admin</b>LTE</span>
+          <span class="logo-lg"><b>Stat</b>THIS!</span>
         </a>
 
         <!-- Header Navbar -->
@@ -26,7 +26,7 @@
                   <span class="label label-success">4</span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li class="header">You have 4 messages</li>
+                  <li class="header">Contact Card</li>
 <li>
                     <!-- inner menu: contains the messages -->
                     <ul class="menu">
@@ -38,16 +38,16 @@
                           </div>
                           <!-- Message title and timestamp -->
                           <h4>
-                            Support Team
-                            <small><i class="fa fa-clock-o"></i> 5 mins</small>
+                            Steve Wells
+                            <small><i class="fa fa-clock-o"></i>&nbsp;anytime</small>
                           </h4>
                           <!-- The message -->
-                          <p>Why not buy a new awesome theme?</p>
+			  <p>steve&#64;stephendwells.com</p>
                         </a>
                       </li><!-- end message -->
                     </ul><!-- /.menu -->
                   </li>
-                  <li class="footer"><a href="#">See All Messages</a></li>
+                  <li class="footer"><a href="https://linkedin.com/in/sdwells/" target=_new>LinkedIn</a></li>
                 </ul>
               </li><!-- /.messages-menu -->
 
@@ -56,21 +56,21 @@
                 <!-- Menu toggle button -->
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <i class="fa fa-bell-o"></i>
-                  <span class="label label-warning">10</span>
+                  <span class="label label-warning">6</span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li class="header">You have 10 notifications</li>
+                  <li class="header">Steve has 6 notifications</li>
                   <li>
                     <!-- Inner Menu: contains the notifications -->
                     <ul class="menu">
                       <li><!-- start notification -->
                         <a href="#">
-                          <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                          <i class="fa fa-users text-aqua"></i> ...in discussions with 5 developers
                         </a>
                       </li><!-- end notification -->
                     </ul>
                   </li>
-                  <li class="footer"><a href="#">View all</a></li>
+                  <li class="footer"><a href="#">juggling juggling</a></li>
                 </ul>
               </li>
               <!-- Tasks Menu -->
@@ -78,10 +78,10 @@
                 <!-- Menu Toggle Button -->
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <i class="fa fa-flag-o"></i>
-                  <span class="label label-danger">9</span>
+                  <span class="label label-danger">4</span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li class="header">You have 9 tasks</li>
+                  <li class="header">Steve has 4 tasks</li>
                   <li>
                     <!-- Inner menu: contains the tasks -->
                     <ul class="menu">
@@ -89,7 +89,7 @@
                         <a href="#">
                           <!-- Task title and progress text -->
                           <h3>
-                            Design some buttons
+                            Maximum Task List Size Reached
                             <small class="pull-right">20%</small>
                           </h3>
                           <!-- The progress bar -->
@@ -104,7 +104,7 @@
                     </ul>
                   </li>
                   <li class="footer">
-                    <a href="#">View all tasks</a>
+                    <a href="http://www.docker.com/">Docker Compiles are Next</a>
                   </li>
                 </ul>
               </li>
@@ -113,14 +113,14 @@
                 <!-- Menu Toggle Button -->
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <!-- The user image in the navbar-->
-                  <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                  <img src="/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <!-- hidden-xs hides the username on small devices so only the image appears. -->
                   <span class="hidden-xs">Stephen D. Wells</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- The user image in the menu -->
                   <li class="user-header">
-                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                    <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
                       Stephen D. Wells - Data Scientist
                       <small>Member since Dec. 2012</small>
@@ -129,22 +129,22 @@
                   <!-- Menu Body -->
                   <li class="user-body">
                     <div class="col-xs-4 text-center">
-                      <a href="#">Followers</a>
+			    <a href="http://www.linkedin.com/in/sdwells/">LinkedIn</a>
                     </div>
                     <div class="col-xs-4 text-center">
-                      <a href="#">Sales</a>
+                      <a href="http://www.stephendwells.com/#projects">Projects</a>
                     </div>
                     <div class="col-xs-4 text-center">
-                      <a href="#">Friends</a>
+                      <a href="http://github.com/yxes/">GitHub</a>
                     </div>
                   </li>
                   <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-left">
-                      <a href="#" class="btn btn-default btn-flat">Profile</a>
+                      <a href="http://www.stephendwells.com/" class="btn btn-default btn-flat">Profile</a>
                     </div>
                     <div class="pull-right">
-                      <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                      <a href="http://rpubs.com/yxes/" class="btn btn-default btn-flat">Publications</a>
                     </div>
                   </li>
                 </ul>
